[gd_scene load_steps=3 format=3 uid="uid://ccdbwlql03nqu"]

[ext_resource type="Script" uid="uid://c3yijigf5a4a2" path="res://components/card.gd" id="1_21rx5"]
[ext_resource type="Texture2D" uid="uid://e6bcc7omlliv" path="res://assets/card_bg.png" id="2_hael8"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 440.0
pivot_offset = Vector2(150, 220)
script = ExtResource("1_21rx5")

[node name="Shadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.49803922)
layout_mode = 0
offset_right = 300.0
offset_bottom = 440.0
texture = ExtResource("2_hael8")

[node name="CardTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(150, 220)
texture = ExtResource("2_hael8")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
